# SmartMap-Agent

./: .env.example  .gitignore  QUICK_START.md  README.md  justfile  langgpt_prompt_generator.md  main.py  pyproject.toml  rag_example.py  run_backend.sh  run_frontend.sh  test_openai.py  travel_planner_agent_prompt.md
.cursor/rules/: langgpt-helper.mdc
backend/: env.example  pyproject.toml  test_baidu_mcp.py
backend/src/: __init__.py
backend/src/api/: __init__.py  main.py
backend/src/core/: __init__.py  chat_openai.py  mcp_client.py  mcp_tools.py  session_manager.py  travel_agent.py
backend/src/tools/: __init__.py  itinerary_mcp_server.py  maps_mcp_server.py  weather_mcp_server.py
backend/src/utils/: info.py  pretty.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: trace
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Header.tsx  TravelAssistant.tsx  Welcome.tsx
output/step3-agent-with-mcp/: news.md
output/step4-rag/: story.md
output/step4-rag/kownledge/: Chelsey_Dietrich.md  Clementina_DuBuque.md  Clementine_Bauch.md  Ervin_Howell.md  Glenna_Reichert.md  (+5 more)
output/travel_knowledge/: popular_destinations.md  travel_planning_basics.md  travel_tips.md
output/travel_plans/: demo_beijing_travel_plan.md  travel_plan_北京_20250609_115611.md
src/augmented/: agent.py  chat_openai.py  embedding_retriever.py  mcp_client.py  mcp_tools.py  vector_store.py
(+17 files in other folders)
